[package]
name = "toothless"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
cc = "1.2.1"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hyper = "0.14"
